<resources>
    <string name="app_name">InfoVCBrochero2.0</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="bienvenido">Bienvenido!! a la App de Villa Cura Brochero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="visitar">Lugares para visitar</string>
    <string name="alojamiento">Alojamientos</string>
    <string name="puntosdeinteres">Puntos de Interes</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="cuadroImage">TODO</string>
</resources>